--- a/IMPLANTAÇÃO DE SISTEMA WEB/style.css
+++ b/IMPLANTAÇÃO DE SISTEMA WEB/style.css
@@ -1,7 +1,29 @@
-header{
-    background-color:brown;
-    color:beige;
+header {
+
+    color:#8b5742;
+    font-family:'Palace Script MT';
+    font-size: 100pt;
     text-align: center;
-    font-size: 60pt;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+
+/*main {
+    background-color: aqua;
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40pt;
+    text-align: center;
+}*/
+footer{
+    background-color:#fafafa ;
+    color:black;
+    font-family:'Edwardian Script ITC';
+    font-size: 40pt;
+    text-align: center;
+
+} 
+.carousel-item{
+    height: 700px; /* altura */
+    width: 100px; /*largura */
+}
+
+    
